--- a/css/styles.css
+++ b/css/styles.css
@@ -6,6 +6,9 @@ font-family: 'Merriweather', serif;
 /* font-size: 1em; */
 /* background-color: #E7F5F2; */
 }
+p{
+    color: #40514E;
+}
 h1{
     font-family: 'Sacramento', cursive;
     font-size: 5.625rem;
@@ -26,11 +29,11 @@ h3{
 }
  div{
     margin-bottom: 100px;
-    margin-top: 80px;
-    
+    margin-top: 80px;  
 }
 a{
     color: #11999E;
+    text-decoration: none;
 }
 hr{
     /* background-color: grey; */
@@ -39,31 +42,23 @@ hr{
     height: 10px;
     width: 10%;
 }
-
-
 /* ***************************CLASS/ID SELECTOR********************* */
 
 .top-container{
     position: relative;
-    background-color:#E7F5F2 ;
+    height: 100vh;
+    background: rgb(231,245,242);
+    background: linear-gradient(180deg, rgba(231,245,242,1) 0%, rgba(244,250,249,1) 78%, rgba(255,255,255,1) 100%);
     padding: 10px;
     padding-top:80px ; 
-    margin-bottom: 100px;
+    margin-bottom: 20px;
     margin-top: 0;
-    
+    min-height: 50%;
 }
-.mountain-img{
-    width: 800px;
-    height: 400px;
-    margin: 0;
+.onehr{
+    margin-top: 0;
 }
 
-.middle-container{
-    
-}
-.bottom-container{
-
-}
 .skill-row{
     width: 50%;
     margin: 80px auto;
@@ -71,14 +66,28 @@ hr{
 .skill-webdev{
     float: left;
     margin:0 30px 0 0 ;
+
     width: 25%;
     
 }
 .skill-logodes{
-    float: right;
-    margin: 0 0 0 30px;
+    float: left;
+    margin: 0 30px 0 0;
     width: 25%;
     
+}
+.mod3d{
+    float: left;
+    margin: 0 30px 0 0;
+    width: 25%;
+}
+.mod3dlink h3{
+}
+.mod3dlink h3:hover{
+    transform: scale(1.1);
+}
+.mod3d:hover{
+    transform: scale(1.2);
 }
 .skill-row h3{
     text-align: left ;
@@ -88,6 +97,7 @@ hr{
     text-align: justify ;
     line-height: 1.7;
 }
+
 
 .under{
     text-decoration:underline;
@@ -105,7 +115,9 @@ hr{
     left: 10%;
 }
 .profile p{
+    width: 50%;
     text-align: center;
+    margin: 0 auto ;
 }
 .contact-me p{
     margin-top: 30px;
@@ -118,6 +130,7 @@ hr{
     padding: 15px 20px 15px 20px ;
     border-radius: 7px;
     margin-top: 30px;
+    letter-spacing: 0.3rem;
 }
 /* *********BOTTOM SECTION********** */
 .bottom-container{
@@ -135,6 +148,11 @@ hr{
 .bottom-container p{
     color: white;
     margin: 30px 0 auto;
+    letter-spacing: 3px;
+    font-size: 0.75rem;
     
+}
+.footer-link:hover {
+    color: #E7F5F2;
 }
 /* *********BOTTOM SECTION********** */
