--- a/pages/css/style.css
+++ b/pages/css/style.css
@@ -9,6 +9,13 @@ body{
 }
 .prj{
     background-color: #d4d4d4;
-    padding: 20%;
+    padding: 5%;
     text-align: center;
+}
+.ged img{
+    width: 100%;
+}
+ ul {
+    text-decoration: ; 
+
 }
